# ubo-gui

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: integration_delivery.yml
app/: __init__.py  app.kv
demo/: menu.py
menu/: __init__.py  demo.py  item_widget.kv  item_widget.py  menu.kv  menu.py  types.py
page/: __init__.py
scripts/: deploy.sh
src/: __init__.py  constants.py  main.py
src/app/: __init__.py
src/gauge/: __init__.py  gauge_widget.kv
src/menu/: __init__.py  constants.py  header_menu_page_widget.kv  header_menu_page_widget.py  item_widget.kv  item_widget.py  normal_menu_page_widget.kv  normal_menu_page_widget.py  types.py
src/notification/: __init__.py
src/page/: __init__.py
src/prompt/: __init__.py  prompt_widget.kv
src/volume/: __init__.py  volume_widget.kv
ubo/: __init__.py  keypad.py
ubo/animated_slider/: __init__.py
ubo/app/: __init__.py
ubo/demo/: menu.py
ubo/menu/: __init__.py  header_menu_page_widget.kv  header_menu_page_widget.py  item_widget.kv  item_widget.py  menu.kv  normal_menu_page_widget.kv  normal_menu_page_widget.py
ubo/notification/: __init__.py  notification_widget.kv
ubo/page/: __init__.py
ubo/prompt/: __init__.py
ubo/scrollbar/: __init__.py  scrollbar.kv
ubo/volume/: __init__.py  volume_widget.kv
ubo_gui/: __init__.py  constants.py  logger.py  utils.py
ubo_gui/animated_slider/: __init__.py  animated_slider.kv
ubo_gui/app/: __init__.py  app.kv
ubo_gui/demo/: menu.py
ubo_gui/gauge/: __init__.py  gauge_widget.kv
ubo_gui/menu/: __init__.py  _transitions.py  constants.py  header_menu_page_widget.kv  header_menu_page_widget.py  item_widget.kv  item_widget.py  menu.kv  menu_widget.py  normal_menu_page_widget.py  stack_item.py  transitions.py  types.py  utils.py
ubo_gui/menu/widgets/: __init__.py  header_menu_page_widget.kv  header_menu_page_widget.py  item_widget.kv  item_widget.py  menu_page_widget.kv  menu_page_widget.py  normal_menu_page_widget.kv  normal_menu_page_widget.py
ubo_gui/notification/: __init__.py  notification_widget.kv
ubo_gui/page/: __init__.py
ubo_gui/progress_ring/: __init__.py  progress_ring_widget.kv
ubo_gui/prompt/: __init__.py  prompt_widget.kv
ubo_gui/qrcode/: __init__.py
ubo_gui/spinner/: __init__.py  spinner_widget.kv
ubo_gui/volume/: __init__.py  volume_widget.kv
